# poetry-templating

./: .flake8  LICENCE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
debug-config/: pyproject.toml
src/poetry_plugin_templating/: __init__.py  engine.py  error.py  mixin.py  plugin.py  util.py
src/poetry_templating/: __init__.py  engine.py  error.py  plugin.py  util.py
tests/: conftest.py  test_engine.py  test_plugin.py  test_util.py
