[tool.poetry]
name = "poetry-templating"
version = "1.0.2"
description = "A plugin for poetry which lets you substitute text on build."
authors = ["NimajnebEC <nimajnebec@users.noreply.github.com>"]
repository = "https://github.com/NimajnebEC/poetry-templating"
packages = [{ include = "poetry_templating", from = "src" }]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
poetry = "^1.7.1"
python = "^3.8"

[tool.poetry.group.dev.dependencies]
flake8-length = "^0.3.1"
black = "^23.10.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
templating = "poetry_templating.plugin:TemplatingPlugin"

[tool.poetry_templating]
exclude = "src/poetry_templating/engine.py"
