[tool.poetry]
name = "poetry-templating"
version = "1.0.2"
description = "A plugin for poetry which lets you substitute text on build."
authors = ["NimajnebEC <nimajnebec@users.noreply.github.com>"]
repository = "https://github.com/NimajnebEC/poetry-templating"
packages = [{ include = "poetry_templating", from = "src" }]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.13"
poetry = "^1.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
templating = "poetry_templating.plugin:TemplatingPlugin"

[tool.ruff]
line-length = 92

[tool.poetry_templating]
exclude = "src/poetry_templating/engine.py"
